--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "webpack": "^5.74.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.2"
     }
